# query-os

./: .gitignore  .gitmodules  Cargo.toml  DECISIONS.md  DESIGN.md  README.md  SCRATCHPAD.md  SECURITY.md  debug_like.rs  install.sh  release.sh
docs/: README.md  index.html
src/: applications.rs  filesystem.rs  gui.rs  lib.rs  main.rs  models.rs  network.rs  parser.rs  processes.rs  q.pest  templates.rs  utils.rs  web.rs
