[package]
name = "query-os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "q"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
prettytable = "0.10"
rayon = "1.8"
pest = "2.7"
pest_derive = "2.7"
regex = "1.10"
dirs = "5.0"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.19"
indicatif = "0.17"
url = "2.5"
serde_json = "1.0"
iced = { version = "0.12", features = ["tokio", "canvas", "qr_code", "palette", "image"] }
opener = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.6"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3.0"
